# scikit-llm

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml  pr-labeler.yml  release-drafter.yml
.github/workflows/: draft.yml  pr_labeler.yml  pre_commit_auto_update.yml  pypi-deploy.yml
skllm/: __init__.py  classification.py  completions.py  config.py  gpt4all_client.py  model_constants.py  text2text.py  utils.py  vectorization.py
skllm/datasets/: __init__.py  multi_class.py  multi_label.py  summarization.py  translation.py
skllm/google/: completions.py  tuning.py
skllm/llm/: base.py
skllm/llm/anthropic/: completion.py  credentials.py  mixin.py
skllm/llm/gpt/: completion.py  embedding.py  mixin.py  utils.py
skllm/llm/gpt/clients/gpt4all/: completion.py
skllm/llm/gpt/clients/llama_cpp/: completion.py  handler.py
skllm/llm/gpt/clients/openai/: completion.py  credentials.py  embedding.py  tuning.py
skllm/llm/vertex/: completion.py  mixin.py  tuning.py
skllm/memory/: __init__.py  _annoy.py  _sklearn_nn.py  base.py
skllm/models/: _base.py  gpt_dyn_few_shot_clf.py  gpt_few_shot_clf.py  gpt_zero_shot_clf.py
skllm/models/_base/: classifier.py  tagger.py  text2text.py  vectorizer.py
skllm/models/anthropic/classification/: few_shot.py  zero_shot.py
skllm/models/anthropic/tagging/: ner.py
skllm/models/anthropic/text2text/: summarization.py  translation.py
skllm/models/gpt/: __init__.py  gpt.py  gpt_dyn_few_shot_clf.py  gpt_few_shot_clf.py  gpt_zero_shot_clf.py  vectorization.py
skllm/models/gpt/classification/: few_shot.py  tunable.py  zero_shot.py
skllm/models/gpt/tagging/: ner.py
skllm/models/gpt/text2text/: summarization.py  translation.py  tunable.py
skllm/models/palm/: __init__.py  palm_clf.py  palm_est.py
skllm/models/vertex/classification/: tunable.py  zero_shot.py
skllm/models/vertex/text2text/: tunable.py
skllm/openai/: base_gpt.py  chatgpt.py  credentials.py  embeddings.py  mixin.py  prompts.py  tuning.py
skllm/preprocessing/: __init__.py  gpt_summarizer.py  gpt_translator.py  gpt_vectorizer.py
skllm/prompts/: builders.py  templates.py
skllm/tests/: __init__.py  test_chatgpt.py
skllm/utils/: __init__.py  rendering.py  xml.py
tests/: __init__.py  test_chatgpt.py  test_gpt_few_shot_clf.py  test_gpt_zero_shot_clf.py  test_utils.py
tests/llm/anthropic/: test_anthropic_mixins.py
tests/llm/gpt/: test_gpt_mixins.py
tests/llm/vertex/: test_vertex_mixins.py
