[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
"scikit-learn>=1.1.0",
"pandas>=1.5.0",
"openai>=0.27.0",
"tqdm>=4.60.0",
]
name = "scikit-llm"
version = "0.1.0b2"
authors = [
  { name="Oleg Kostromin", email="kostromin97@gmail.com" },
  { name="Iryna Kondrashchenko", email="iryna230520@gmail.com" },
]
description = "Scikit-LLM: Seamlessly integrate powerful language models like ChatGPT into scikit-learn for enhanced text analysis tasks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]