[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "scikit-learn>=1.1.0",
  "pandas>=1.5.0",
  "openai>=0.27.0",
  "tqdm>=4.60.0",
  "annoy>=1.17.2",
  "google-cloud-aiplatform>=1.27.0",
  "vertexai<0.1.0"
]
name = "scikit-llm"
version = "0.3.1"
authors = [
  { name="Oleg Kostromin", email="kostromin97@gmail.com" },
  { name="Iryna Kondrashchenko", email="iryna230520@gmail.com" },
]
description = "Scikit-LLM: Seamlessly integrate powerful language models like ChatGPT into scikit-learn for enhanced text analysis tasks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
gpt4all = ["gpt4all>=1.0.0"]

[tool.ruff]
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # pydocstyle
    "D",
    # flake8-bandit
    "S",
    # pyupgrade
    "UP",
    # pep8-naming
    "N",
]
# Error E501 (Line too long) is ignored because of docstrings.
ignore = [
    "S101",
    "S301",
    "S311",
    "D100",
    "D200",
    "D203",
    "D205",
    "D401",
    "E501",
    "N803",
    "N806",
    "D104",
]
extend-exclude = ["tests/*.py", "setup.py"]
target-version = "py38"
force-exclude = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
preview = true
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
filter_files = true
known_first_party = ["skllm", "skllm.*"]
skip = ["__init__.py"]

[tool.docformatter]
close-quotes-on-newline = true # D209

[tool.interrogate]
fail-under = 65
ignore-module = true
ignore-nested-functions = true
ignore-private = true
exclude = ["tests", "setup.py"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
